[project]
name = "vit-on-pets"
version = "0.1.0"
description = "pytorch is needed"
authors = [
    {name = "emma",email = "emma3@duck.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "grad-cam (>=1.5.4,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch_cu121"}
torchvision = {source = "pytorch_cu121"}
torchaudio = {source = "pytorch_cu121"}
